src/test/ui/suggestions/impl-trait-missing-lifetime.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/impl-trait-missing-lifetime.rs:1:31
   |
LL | fn f(_: impl Iterator<Item = &'_ ()>) {}
   |                               ^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL | fn f<'a>(_: impl Iterator<Item = &'a ()>) {}
   |     ^^^^                          ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
