src/test/ui/suggestions/impl-trait-missing-lifetime.rs
fn f(_: impl Iterator<Item = &'_ ()>) {} //~ ERROR missing lifetime specifier
fn main() {}
